test/ui/test/redefinition-of-known-binding.stderr
error[E039]: the known binding ‘Unit’ is defined multiple times
   ┌─ ${TEST_FOLDER}/redefinition-of-known-binding.lushui:4:6
   │
 4 │ data Unit: Type of
   │      ──── previous definition
   │
   ├─ ${TEST_FOLDER}/redefinition-of-known-binding.lushui:10:10
   │
10 │     data Unit: Type of
   │          ════ redefinition

error[E039]: the known binding ‘Unit.unit’ is defined multiple times
   ┌─ ${TEST_FOLDER}/redefinition-of-known-binding.lushui:5:5
   │
 5 │     unit: Unit
   │     ──── previous definition
   │
   ├─ ${TEST_FOLDER}/redefinition-of-known-binding.lushui:11:9
   │
11 │         unit: Unit
   │         ════ redefinition

error: aborting due to 2 previous errors

