test/ui/test/redefinition-of-known-binding.lushui
;;; TEST compiler-args --no-core -Z internals

@public @known
data Unit: Type of
    unit: Unit

module disambiguator of

    @public @known
    data Unit: Type of
        unit: Unit
